--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-torch==1.1.0
-spacy==2.0.18
-allennlp==0.8.2
+torch==1.5.0
+spacy==2.1.9
+allennlp==0.9.0
 dill
-torch-scatter==1.2.0
-torch-sparse==0.4.3
-torch-cluster==1.3.0
-torch-geometric==1.2.1
-ordered_set
+torch-scatter==2.0.4
+torch-sparse==0.6.1
+torch-cluster==1.5.4
+torch-geometric==1.4.3
+ordered_set==4.0.1
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz
